crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@223.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT setweight('w:12B w:13* w:12,5,6 a:1,3* a:3 w asd:1dc asd zxc:81,567,222A'::tsvector, 'c');"
---
SelectStmt@0..97
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..95
    FuncCall@7..95
      Ident@7..16 "setweight"
      Ascii40@16..17 "("
      TypeCast@17..90
        AConst@17..80
          Sconst@17..80 "'w:12B w:13* w:12,5,6 ..."
        Typecast@80..82 "::"
        TypeName@82..90
          Ident@82..90 "tsvector"
      Ascii44@90..91 ","
      Whitespace@91..92 " "
      AConst@92..95
        Sconst@92..95 "'c'"
  Ascii41@95..96 ")"
  Ascii59@96..97 ";"

