crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@226.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT setweight('a:1,3A asd:1C w:5,6,12B,13A zxc:81,222A,567'::tsvector, 'c', '{a}');"
---
SelectStmt@0..86
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..84
    FuncCall@7..84
      Ident@7..16 "setweight"
      Ascii40@16..17 "("
      TypeCast@17..72
        AConst@17..62
          Sconst@17..62 "'a:1,3A asd:1C w:5,6, ..."
        Typecast@62..64 "::"
        TypeName@64..72
          Ident@64..72 "tsvector"
      Ascii44@72..73 ","
      Whitespace@73..74 " "
      AConst@74..77
        Sconst@74..77 "'c'"
      Ascii44@77..78 ","
      Whitespace@78..79 " "
      AConst@79..84
        Sconst@79..84 "'{a}'"
  Ascii41@84..85 ")"
  Ascii59@85..86 ";"

