crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@228.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT setweight('a asd w:5,6,12B,13A zxc'::tsvector, 'c', ARRAY['a', 'zxc', '', NULL]);"
---
SelectStmt@0..88
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..85
    FuncCall@7..85
      Ident@7..16 "setweight"
      Ascii40@16..17 "("
      TypeCast@17..52
        AConst@17..42
          Sconst@17..42 "'a asd w:5,6,12B,13A  ..."
        Typecast@42..44 "::"
        TypeName@44..52
          Ident@44..52 "tsvector"
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..57
        Sconst@54..57 "'c'"
      Ascii44@57..58 ","
      Whitespace@58..59 " "
      AArrayExpr@59..85
        Array@59..64 "ARRAY"
        Ascii91@64..65 "["
        AConst@65..68
          Sconst@65..68 "'a'"
        Ascii44@68..69 ","
        Whitespace@69..70 " "
        AConst@70..75
          Sconst@70..75 "'zxc'"
        Ascii44@75..76 ","
        Whitespace@76..77 " "
        AConst@77..79
          Sconst@77..79 "''"
        Ascii44@79..80 ","
        Whitespace@80..81 " "
        AConst@81..85
          NullP@81..85 "NULL"
  Ascii93@85..86 "]"
  Ascii41@86..87 ")"
  Ascii59@87..88 ";"

