crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@229.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_filter('base:7A empir:17 evil:15 first:11 galact:16 hidden:6A rebel:1A spaceship:2A strike:3A victori:12 won:9'::tsvector, '{a}');"
---
SelectStmt@0..140
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..138
    FuncCall@7..138
      Ident@7..16 "ts_filter"
      Ascii40@16..17 "("
      TypeCast@17..131
        AConst@17..121
          Sconst@17..121 "'base:7A empir:17 evi ..."
        Typecast@121..123 "::"
        TypeName@123..131
          Ident@123..131 "tsvector"
      Ascii44@131..132 ","
      Whitespace@132..133 " "
      AConst@133..138
        Sconst@133..138 "'{a}'"
  Ascii41@138..139 ")"
  Ascii59@139..140 ";"

